deployment_bluegreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask2
  name: flask2

spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

    type: RollingUpdate

  template:
    metadata:
      labels:
        app: flask2
    spec:
      containers:
      - image: flask:v2
        imagePullPolicy: IfNotPresent
        name: flask2
        ports:
        - containerPort: 8080
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

---
