deployment_rolling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask
  name: flask

spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  minReadySeconds: 10

  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - image: flaskapp:v3
        imagePullPolicy: IfNotPresent
        name: flask
        ports:
        - containerPort: 8080
        
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 7
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 7
          periodSeconds: 5

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
