service_v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask2
  name: flask2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask2
  type: ClusterIP
