services_init.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo  
  name: mongo

spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis  
  name: redis

spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask
  name: flask
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask
  type: ClusterIP
